--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.0.5",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/match-sorter-utils": "^8.8.4",
+    "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "flowbite": "^1.7.0",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
+    "react-select": "^5.7.4",
     "styled-components": "^6.0.3",
     "yup": "^1.2.0"
   },
