--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.4",
+    "react-select-async-paginate": "^0.7.3",
     "styled-components": "^6.0.3",
     "yup": "^1.2.0"
   },
